--- a/セクション5.ipynb
+++ b/セクション5.ipynb
@@ -19,7 +19,12 @@
    "metadata": {},
    "source": [
     "# テクニカルメタデータについて\n",
-    "テクニカルメタデータとは、"
+    "テクニカルメタデータとは、技術的な詳細を表すものです。  \n",
+    "例えば、テーブルのフォーマット(Parquet？CSVなのか？)は何か？やデータの形はどのような状態なのか？  \n",
+    "\n",
+    "といった情報を取得することになります。  \n",
+    "\n",
+    "特にデータを利用するエンジニア向けの情報になることが多いですが、次に紹介するデータプロファイリングはエンジニアだけでなくビジネスユーザにも有効な情報を提供することが可能です。"
    ]
   },
   {
@@ -78,18 +83,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# メタデータ取得対象のデータを取得する\n",
-    "# 前のチャプターで「データベース名」「テーブル名」「テーブル定義」「サマリー」を登録したテーブルを取得します\n",
-    "\n",
-    "df=spark.sql(\"select * from  metadata_tmp.sample_metadata\")\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -123,7 +116,7 @@
     "record_num=spark.sql(\"select count(*) as row_num from data_management_crush_course.jinko_table \")\n",
     "record_num.show()\n",
     "\n",
-    "\n",
+    "# 件数情報を取得する\n",
     "record_count=record_num.collect()[0].asDict()['row_num']"
    ]
   },
@@ -150,7 +143,13 @@
     "# 平均と合計値\n",
     "# 今回は平均として、女性と男性の合計値の平均をとっていこうと思います。\n",
     "spark.sql(\"REFRESH TABLE data_management_crush_course.jinko_table \")\n",
-    "avg=spark.sql(\"select avg(sum) as avg from (select cast(sum(jinko_male)+sum(jinko_femail) as decimal(19, 0)) as sum from data_management_crush_course.jinko_table) \")\n",
+    "avg=spark.sql(\"\"\"\n",
+    "select avg(sum) as avg \n",
+    " from \n",
+    " (select cast(sum(jinko_male)+sum(jinko_femail) as decimal(19, 0)) as sum \n",
+    "  from \n",
+    "   data_management_crush_course.jinko_table) \n",
+    "\"\"\")\n",
     "avg.show()"
    ]
   },
@@ -395,7 +394,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# データ品質"
+    "# データ品質管理\n",
+    "ここで一つ別のトピックについて言及しようと思います。\n",
+    "それがデータ品質管理です。\n",
+    "\n",
+    "データ品質管理とは、データプロファリングの延長線にあるものですが、データがより良い状態を達成するための方法の一つです。  \n",
+    "データは当然ながら「正しい」状態で配置されていることが好ましいのは当たり前ですが、闇雲に施策を打ってもうまくいきません。\n",
+    "\n",
+    "そこでデータプロファイリングを使いながらデータの不備を発見しその不備に対してアクションを取っていくことが必要です。\n",
+    "\n",
+    "アクションとは\n",
+    "\n",
+    "- 対抗システム(ここでのシステムは、データソース側のシステムのこと)自体の修正\n",
+    "- データ自体の修正（再集計など）\n",
+    "\n",
+    "が挙げられます。\n",
+    "入門のコースのためデータ品質管理は取り上げませんが、  \n",
+    "今回のデータプロファイリングの延長戦にはデータ品質管理が存在していると認識してもらえるだけでもまずは良いと思います。"
    ]
   }
  ],
