modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2633.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2634.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2635.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2636.ipynb"

--- a/セクション3.ipynb
+++ b/セクション3.ipynb
@@ -45,11 +45,11 @@
     "この例は後に出てくる、ビジネスメタデータの一例です。\n",
     "メタデータには3種類あり、「ビジネスメタデータ」「テクニカルメタデータ」「オペレーショナルメタデータ」の3種類が存在しています。\n",
     "\n",
-    "ビジネスメタデータとは、っっんおこと\n",
-    "テクニカルメタデータの例を簡単にあげると、\n",
-    "オペレーショナルメタデータの例を簡単にあげると、\n",
+    "ビジネスメタデータとは、テーブル定義が最も有名なビジネスメタデータです。  \n",
+    "テクニカルメタデータとは、テーブルのデータの状態であったり、データがどこに保存されているのか？といった技術的な情報を表すメタデータです  \n",
+    "オペレーショナルメタデータとは、データに関する5w1hを示すメタデータで、データの生成するまでにどのようなことが起こっていたのかを表現するメタデータです。  \n",
     "\n",
-    "となります。\n",
+    "となります。  \n",
     "それぞれのメタデータの取得や説明はセクション４、５、６で行っていきます。"
    ]
   },
@@ -109,7 +109,11 @@
     "\n",
     "APIの場合はRESTのAPIでGET table とすればテーブルの定義がAPIとして返却されたり、GUIであればメタデータストアに保存されているデータをユーザに見やすいように整形するといった用途です。\n",
     "\n",
-    "今回は表示や取得のところまではコース内に含みませんが、Mysqlにデータを保存しておくことによってAPIとして返却することもGUIとして提供することも可能になります。"
+    "APIで気をつける点としては、データそのものを返却してしまおうとする行為です。    \n",
+    "ビッグデータ基盤で管理しているデータは数TBを超えるデータを保持しています。  \n",
+    "そのため、そのようなデータを返却しようとすると、そもそも返却できないことが大半でできたとしても、システムやネットワークにかなりの負荷をかけることになります。  \n",
+    "\n",
+    "今回は表示や取得のところまではコース内に含みませんが、Mysqlにデータを保存しておくことによってAPIとして返却することもGUIとして提供することも可能になります。\n"
    ]
   },
   {
