--- a/セクション6.ipynb
+++ b/セクション6.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "source": [
     "# オペレーショナルメタデータは5w1h\n",
-    "オペレーショナルメタデータとは、データに関する5w1hを取得することです。  \n",
+    "オペレーショナルメタデータとは、データに関する5w1hを取得し表現することです。  \n",
     "どれくらいアクセスがあるのか？誰が主に使っているのか？\n",
     "そんな情報を取得し、メタデータストアに格納します。\n",
     "\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,9 +61,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: Ignoring non-Spark config property: hive.exec.dynamic.partition.mode\n",
+      "Warning: Ignoring non-Spark config property: hive.exec.dynamic.partition\n",
+      "Your hostname, yukisaitos-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 192.168.0.30 instead (on interface en0)\n",
+      "Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "WARNING: An illegal reflective access operation has occurred\n",
+      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/opt/homebrew/Cellar/apache-spark/3.2.0/libexec/jars/spark-unsafe_2.12-3.2.0.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
+      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
+      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
+      "WARNING: All illegal access operations will be denied in a future release\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "#pysparkに必要なライブラリを読み込む\n",
     "from pyspark import SparkConf\n",
@@ -268,7 +287,7 @@
    "metadata": {},
    "source": [
     "# メタデータの形は最終的にどうなったのか？\n",
-    "まずは結果を確認する前に、Sparkテーブルの結果をMysqlに格納しましょう。　　\n",
+    "まずは結果を確認する前に、Sparkテーブルの結果をMysqlに格納しましょう。  \n",
     "Mysqlに格納する理由は他のアプリケーション（APIやGUI）からの連携性を高めるためでした。\n",
     "\n",
     "SparkテーブルとMysqlテーブルの大きな違いを上げるのであれば、実行速度の違いが挙げられます。  \n"
@@ -324,6 +343,13 @@
     "spark.stop()\n",
     "spark.sparkContext.stop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
