--- a/セクション5.ipynb
+++ b/セクション5.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +55,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: Ignoring non-Spark config property: hive.exec.dynamic.partition.mode\n",
+      "Warning: Ignoring non-Spark config property: hive.exec.dynamic.partition\n",
+      "Your hostname, yukisaitos-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 192.168.0.30 instead (on interface en0)\n",
+      "Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "WARNING: An illegal reflective access operation has occurred\n",
+      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/opt/homebrew/Cellar/apache-spark/3.2.0/libexec/jars/spark-unsafe_2.12-3.2.0.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
+      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
+      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
+      "WARNING: All illegal access operations will be denied in a future release\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
+     ]
+    }
+   ],
    "source": [
     "#pysparkに必要なライブラリを読み込む\n",
     "from pyspark import SparkConf\n",
@@ -412,6 +433,62 @@
     "が挙げられます。\n",
     "入門のコースのためデータ品質管理は取り上げませんが、  \n",
     "今回のデータプロファイリングの延長戦にはデータ品質管理が存在していると認識してもらえるだけでもまずは良いと思います。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 演習答え"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "288"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 指定のフォーマットに沿っているもの\n",
+    "df=spark.sql(\"select * from data_management_crush_course.jinko_table \")\n",
+    "expr = \"[0-9]{2}\"\n",
+    "dx = df.filter(df[\"code\"].rlike(expr))\n",
+    "dx.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 指定のフォーマットに沿っていないもの\n",
+    "df=spark.sql(\"select * from data_management_crush_course.jinko_table \")\n",
+    "expr = \"[0-9]{2}\"\n",
+    "dx = df.filter(df[\"code\"].rlike(expr))\n",
+    "# 全体から指定フォーマットに沿っているものを除いています。\n",
+    "df.subtract(dx).count()"
    ]
   }
  ],
