new file:   images/MetaData.png 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2633.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2634.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2635.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2636.ipynb"

--- a/セクション5.ipynb
+++ b/セクション5.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 本チャプターの目次\n",
+    "# 本セクションの目次\n",
     "1. テクニカルメタデータについて\n",
     "2. テクニカルメタデータの一種データプロファイリング\n",
     "3. PySparkでデータプロファイリングをしてみよう1 \n",
     "4. PySparkでデータプロファイリングをしてみようその２\n",
     "5. PySparkでデータプロファイリングをしてみようその3\n",
-    "6. データプロファイリングの結果をテーブルに格納してみよう\n",
+    "6. データプロファイリングの結果をSparkテーブルに格納してみよう\n",
     "7. データ品質"
    ]
   },
@@ -193,18 +193,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
+      "|cardinaryty_code|cardinaryty_gengo|cardinaryty_wareki|cardinaryty_seireki|cardinaryty_chu|cardinaryty_sokei|cardinaryty_jinko_male|cardinaryty_jinko_femail|cardinaryty_kenmei|\n",
+      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
+      "|            0.17|             0.00|              0.02|               0.02|           0.00|             1.01|                  0.97|                    1.07|              0.16|\n",
+      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql.functions import approx_count_distinct\n",
     "from pyspark.sql.types import DecimalType\n",
     "\n",
-    "# カーディナリティとセレクティビティはほぼ同時に出力することができます\n",
-    "# 今回はkenmeiについてかーディなりティを測ってみます\n",
+    "# カーディナリティを測ってみます\n",
     "card=spark.sql(\"select * from data_management_crush_course.jinko_table\")\n",
     "\n",
-    "cols_cardinality = card.select([(approx_count_distinct(c)/card.count()).cast(DecimalType(38,2)).alias(\"cardinaryty_\"+c) for c in card.columns])\n",
+    "cols_cardinality = card.select([(approx_count_distinct(c)/card.count()). \\\n",
+    "    cast(DecimalType(38,2)).alias(\"cardinaryty_\"+c) for c in card.columns])\n",
     "\n",
     "cols_cardinality.show() \n",
     "\n",
@@ -215,15 +228,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+\n",
+      "|count(DISTINCT code)|\n",
+      "+--------------------+\n",
+      "|                  50|\n",
+      "+--------------------+\n",
+      "\n",
+      "+-----------+------+\n",
+      "|trunsaction|master|\n",
+      "+-----------+------+\n",
+      "|         48|    50|\n",
+      "+-----------+------+\n",
+      "\n",
+      "+-----------+\n",
+      "|selectivity|\n",
+      "+-----------+\n",
+      "|       0.96|\n",
+      "+-----------+\n",
+      "\n",
+      "0.96\n"
+     ]
+    }
+   ],
    "source": [
+    "from pyspark.sql.functions import approx_count_distinct\n",
+    "from pyspark.sql.types import DecimalType\n",
     "\n",
-    "#　セレクティビティはキーを指定した場合（今回の場合はkenmei）レコードの返却はどれくらいであるかを想定するものです\n",
-    "card=spark.sql(\"select * from data_management_crush_course.jinko_table where kenmei='東京都'\")\n",
+    "# 今回はcodeを条件として指定した時に、どれだけ件数が返却される可能性があるかを検証してみます。\n",
+    "# jinko_tableとjinko_codeテーブル(全国のコードが削除されている＆＆神奈川のコードが変更されている)\n",
+    "# jinko_codeテーブルベースで検索した件数と、オリジナルの生の件数を割り算することでセレクティビティを出すことが可能です。\n",
     "\n",
-    "cols_selctivity = card.select([(approx_count_distinct(c)).cast(DecimalType(38,2)).alias(\"cardinaryty_\"+c) for c in card.columns])\n",
+    "#オリジナルの件数を表示\n",
+    "spark.sql(\"select count(distinct jinko.code) from data_management_crush_course.jinko_table jinko\").show()\n",
+    "\n",
+    "#　セレクティビティはキーを指定した場合（今回の場合はcode）レコードの返却はどれくらいであるかを想定するものです\n",
+    "card=spark.sql(\"\"\" \n",
+    "select count(distinct jinko.code) trunsaction , count( distinct num.num_code) master from\n",
+    "  data_management_crush_course.jinko_table jinko,\n",
+    "  (select code as num_code from data_management_crush_course.jinko_table) num\n",
+    "where jinko.code in (select code as num_code from data_management_crush_course.jinko_code)\n",
+    "\"\"\")\n",
+    "\n",
+    "card.show()\n",
+    "\n",
+    "# 件数が一致しているならば返却されるはず\n",
+    "# そうでなければ欠落が発生する\n",
+    "cols_selctivity = card.select((card.trunsaction/card.master).cast(DecimalType(38,2)).alias(\"selectivity\"))\n",
     "\n",
     "cols_selctivity.show()\n",
     "# 表示された結果がおおよその返却結果（件数）になります。\n",
@@ -234,14 +291,19 @@
     "cols_selctivity.createOrReplaceTempView(\"tmp\")\n",
     "list_selectivity=spark.sql(\"\"\"\n",
     "select \n",
-    "CONCAT(cardinaryty_code, ',', cardinaryty_gengo, ',',cardinaryty_wareki ,',', cardinaryty_seireki,',', cardinaryty_chu,',',cardinaryty_sokei, ',', cardinaryty_jinko_male,',',cardinaryty_jinko_femail,',',cardinaryty_kenmei)\n",
+    "selectivity\n",
     " as concat from tmp\n",
     "\"\"\"\n",
-    ").collect()[0].asDict()['concat'].split(',')\n",
+    ").collect()[0].asDict()['concat']\n",
     "\n",
-    "#調べた結果として最大値を機械的に取得して格納しておきます（サイトにメタデータテーブルに格納します。）\n",
-    "cols_selctivity_max=max(list_selectivity)\n",
-    "print(cols_selctivity_max)"
+    "#調べた結果として取得して値を格納しておきます\n",
+    "print(list_selectivity)\n",
+    "\n",
+    "# 1の場合はレコードが必ず一件返ってくることが想定される\n",
+    "# 1より大きい場合はレコードが1件以上返却される場合がある\n",
+    "# 1より小さい場合はレコードが一件も返却されない場合がある\n",
+    "\n",
+    "# 今回は0.96なので、一件も返却されない場合がある"
    ]
   },
   {
@@ -250,15 +312,15 @@
    "source": [
     "# 結果から考察してみる\n",
     "この結果を用いてどう考えるか？というところです。  \n",
-    "現在は「kenmei」をパーティションにしています。\n",
+    "現在はjinko_tableは「kenmei」をパーティションにしています。\n",
     "\n",
-    "パーティションは多すぎてもいけませんし、少なすぎてもいけません。\n",
+    "パーティションは多すぎてもいけませんし、少なすぎてもいけません。  \n",
     "この場合「cardinaryty_jinko_male」などでパーティションを切ってしまうとパーティションが多くなってしまいますし、一方で「cardinaryty_gengo」でパーティションを切るとデータが一つのパーティションに入り込んでしまいます。\n",
     "\n",
     "そのように考えると「cardinaryty_kenmei」は多くもなく少なくもないちょうどいいカーディナリティであることがわかります。\n",
     "\n",
-    "セレクティビティに関してはパーティション唯一に絞ることはできないものの、県ごとに西暦が6年分記録されているようですね。  \n",
-    "特にプライマリーキー(ビッグデータ基盤ではUUIDであることが多い)などをセレクティビティチェックした時にレコードが複数帰ってくる場合はどこかの経路で何か間違えているということになります。"
+    "セレクティビティに関してはcodeでは唯一に絞ることはできず、しかもデータが取れない場合があることがわかりました。\n",
+    "特にプライマリーキー(ビッグデータ基盤ではUUIDを付与したりすることが多い)などをセレクティビティチェックした時にレコードが複数返却される(されない)場合はどこかの経路で何か間違えているということになります。"
    ]
   },
   {
@@ -269,31 +331,48 @@
     "データプロファイリング３では、コンシステンシーについて考えてみたいと思います。\n",
     "コンシステンシーとは一貫性があるかないかという指標です。\n",
     "\n",
-    "例えばkenmei_code(今回はマスターテーブルと考えてください)と今回のjinko_tableを使ってみていきましょう(作成はチャプター３で実施済みです)\n",
+    "例えばjinko_code(今回はマスターテーブルと考えてください)と今回のjinko_tableを使ってみていきましょう(作成はチャプター３で実施済みです)\n",
     "\n",
     "もっとも一般的な一貫性のチェックはマスターテーブルなどのコードとの一致率を調べることです。\n",
     "数値で出すというより、Yes Noくらいの判定でもOKです。\n",
     "\n",
-    "マスターコードが更新されていない（もしくは正しく更新されていない）場合必ず結合時に紐つかないレコードが存在します。  \n",
+    "マスターコードが更新されていない（もしくは正しく反映されていない）場合必ず結合時に紐つかないレコードが存在します。  \n",
     "データ分析においてはテーブルの結合はデータの価値を高めていく行為の一つです。  \n",
     "そこでデータの欠落が起きてしまうとそれだけで価値が下がってしまうことにもつながります。  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49\n",
+      "50\n",
+      "False\n",
+      "+----+\n",
+      "|diff|\n",
+      "+----+\n",
+      "|  00|\n",
+      "|  14|\n",
+      "+----+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 一貫しているかどうかを判定するためには集合演算を使います\n",
     "\n",
     "#jinko_codeにおけるcodeとjinko_tableにおけるcodeを比較してみることにします。\n",
     "#マスターテーブルですので、本来であれば差分は0となるはずです\n",
     "\n",
-    "jinko_code=spark.sql(\"select code from data_management_crush_course.jinko_code\")\n",
+    "jinko_code=spark.sql(\"select distinct(code) from data_management_crush_course.jinko_code\")\n",
     "jinko_table=spark.sql(\"select distinct(code) from data_management_crush_course.jinko_table\")\n",
     "\n",
-    "print(jinko_code.count() )\n",
+    "print(jinko_code.count())\n",
     "print(jinko_table.count())\n",
     "\n",
     "consistency_judge_f=True\n",
@@ -304,7 +383,10 @@
     "    consistency_judge_f = False\n",
     "\n",
     "#結果\n",
-    "print(consistency_judge_f)\n"
+    "print(consistency_judge_f)\n",
+    "\n",
+    "#　差分を表示してみる\n",
+    "jinko_table.subtract(jinko_code).selectExpr('code as diff').show()\n"
    ]
   },
   {
@@ -323,40 +405,72 @@
     "それぞれ対応する変数は以下になります。\n",
     "\n",
     "- record_count\n",
-    "- cols_selctivity_max\n",
+    "- list_selectivity\n",
     "- consistency_judge_f"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "|       database_name| table_name|    table_definition|                               sammary|record_num|selectivity|consistency_flag|frequency_access|\n",
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "|data_management_c...|jinko_table|CREATE TABLE `dat...|一旦テーブルの説明は空にしておきます。|       300|       0.96|           false|            null|\n",
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from pyspark.sql.functions import when\n",
     "metadata_df=spark.sql(\"select * from metadata_tmp.sample_metadata \")\n",
     "\n",
     "# メタデータ取得対象のデータを更新する\n",
-    "metadata_df = metadata_df.withColumn(\"record_num\", when(metadata_df.record_num.isNull() ,record_count).otherwise(metadata_df.record_num))\n",
-    "metadata_df = metadata_df.withColumn(\"selectivity\", when(metadata_df.selectivity.isNull() ,cols_selctivity_max).otherwise(metadata_df.selectivity))\n",
-    "metadata_df = metadata_df.withColumn(\"consistency_flag\", when(metadata_df.consistency_flag.isNull() ,consistency_judge_f).otherwise(metadata_df.consistency_flag))\n",
+    "metadata_df = metadata_df. \\\n",
+    "    withColumn(\"record_num\", when(metadata_df.record_num.isNull() ,record_count). \\\n",
+    "        otherwise(metadata_df.record_num))\n",
+    "metadata_df = metadata_df. \\\n",
+    "    withColumn(\"selectivity\", when(metadata_df.selectivity.isNull() ,list_selectivity). \\\n",
+    "        otherwise(metadata_df.selectivity))\n",
+    "metadata_df = metadata_df. \\\n",
+    "    withColumn(\"consistency_flag\", when(metadata_df.consistency_flag.isNull() ,consistency_judge_f). \\\n",
+    "        otherwise(metadata_df.consistency_flag))\n",
     "\n",
     "metadata_df.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#取得したデータをmetadata_tmp.sample_metadataに格納していきます\n",
     "#読み込んだテーブルに対して直接データを入れることができないので、一度ファイルを吐き出します\n",
     "\n",
     "spark.sql(\"REFRESH TABLE metadata_tmp.sample_metadata\")\n",
-    "metadata_df.write.mode('overwrite').parquet(\"/Users/saitouyuuki/Desktop/src/pyspark_datamanagement_metadata/dataset/tmp/\")\n",
-    "insert_df=spark.read.parquet(\"/Users/saitouyuuki/Desktop/src/pyspark_datamanagement_metadata/dataset/tmp/\")\n",
+    "metadata_df.write.mode('overwrite'). \\\n",
+    "    parquet(\"/Users/saitouyuuki/Desktop/src/pyspark_datamanagement_metadata/dataset/tmp/\")\n",
+    "insert_df=spark.read. \\\n",
+    "    parquet(\"/Users/saitouyuuki/Desktop/src/pyspark_datamanagement_metadata/dataset/tmp/\")\n",
     "\n",
     "#取得したデータをmetadata_tmp.sample_metadataに格納していきます\n",
     "insert_df.createOrReplaceTempView(\"sample\")\n",
@@ -370,9 +484,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "|       database_name| table_name|    table_definition|                               sammary|record_num|selectivity|consistency_flag|frequency_access|\n",
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "|data_management_c...|jinko_table|CREATE TABLE `dat...|一旦テーブルの説明は空にしておきます。|       300|       0.96|           false|            null|\n",
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 結果の確認をしてみます\n",
     "\n",
@@ -381,9 +508,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Thu Nov 25 16:42:40 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Thu Nov 25 16:42:41 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Thu Nov 25 17:18:05 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Thu Nov 25 17:18:05 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n"
+     ]
+    }
+   ],
    "source": [
     "# Stopは忘れずに\n",
     "# 忘れてしまうと、いつの間にか接続が溜まっていってしまいます\n",
@@ -406,7 +544,7 @@
     "\n",
     "アクションとは\n",
     "\n",
-    "- 対抗システム(ここでのシステムは、データソース側のシステムのこと)自体の修正\n",
+    "- 対向システム(ここでのシステムは、データソース側のシステムのこと)自体の修正\n",
     "- データ自体の修正（再集計など）\n",
     "\n",
     "が挙げられます。\n",
