--- a/セクション5.ipynb
+++ b/セクション5.ipynb
@@ -217,9 +217,7 @@
     "card=spark.sql(\"select * from data_management_crush_course.jinko_table\")\n",
     "\n",
     "cols_cardinality = card.select([(approx_count_distinct(c)/card.count()). \\\n",
-    "    cast(DecimalType(38,2)).alias(\"cardinaryty_\"+c) for c in card.columns])\n",
-    "\n",
-    "\n"
+    "    cast(DecimalType(38,2)).alias(\"cardinaryty_\"+c) for c in card.columns])"
    ]
   },
   {
