--- a/セクション5.ipynb
+++ b/セクション5.ipynb
@@ -144,7 +144,7 @@
     "# 今回は平均として、女性と男性の合計値の平均をとっていこうと思います。\n",
     "spark.sql(\"REFRESH TABLE data_management_crush_course.jinko_table \")\n",
     "avg=spark.sql(\"\"\"\n",
-    "select avg(sum) as avg \n",
+    "select sum / 2 as avg \n",
     " from \n",
     " (select cast(sum(jinko_male)+sum(jinko_femail) as decimal(19, 0)) as sum \n",
     "  from \n",
