--- a/セクション5.ipynb
+++ b/セクション5.ipynb
@@ -141,14 +141,12 @@
    "outputs": [],
    "source": [
     "# 平均と合計値\n",
-    "# 今回は平均として、女性と男性の合計値の平均をとっていこうと思います。\n",
+    "# 今回は平均として、女性と男性の全体の平均をとっていこうと思います。\n",
     "spark.sql(\"REFRESH TABLE data_management_crush_course.jinko_table \")\n",
     "avg=spark.sql(\"\"\"\n",
-    "select sum / 2 as avg \n",
+    "select avg(sokei) as avg \n",
     " from \n",
-    " (select cast(sum(jinko_male)+sum(jinko_femail) as decimal(19, 0)) as sum \n",
-    "  from \n",
-    "   data_management_crush_course.jinko_table) \n",
+    "   data_management_crush_course.jinko_table\n",
     "\"\"\")\n",
     "avg.show()"
    ]
