modified:   README.md 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2636.ipynb"

--- a/セクション6.ipynb
+++ b/セクション6.ipynb
@@ -557,7 +557,7 @@
     "metadata_df.show()\n",
     "\n",
     "metadata_df.write.format('jdbc').options(\n",
-    "      url='jdbc:mysql://localhost/metadata?enabledTLSProtocols=TLSv1.2',\n",
+    "      url='jdbc:mysql://db_mysql/metadata?enabledTLSProtocols=TLSv1.2',\n",
     "      driver='com.mysql.jdbc.Driver',\n",
     "      dbtable='metadatas',\n",
     "      user='root',\n",
